# Render-SR

ai/: requirements-dev.txt  requirements.txt
ai/configs/: dataset_smoke.yaml  evaluate_ablation.yaml  evaluate_ablation_v2.yaml  evaluate_extended.yaml  evaluate_models.yaml  train_rendering_aware.yaml  train_rendering_aware_v2.yaml  train_rgb_baseline.yaml  train_rgb_baseline_v2.yaml  train_rgb_depth.yaml  train_rgb_depth_v2.yaml  train_rgb_normal.yaml  train_rgb_normal_v2.yaml  train_rgb_overfit.yaml
ai/datasets/: render_sr_dataset.py  torch_dataset.py
ai/models/: backbone.py  sr_rendering_aware.py  sr_rgb.py
ai/tools/: dataset_smoke.py  eval_summary_md.py  evaluate_ablation.py  evaluate_extended.py  evaluate_models.py  loader_smoke.py  model_smoke.py  train_ablation.py  train_rendering_aware.py  train_rgb_baseline.py  train_rgb_overfit.py
ai/utils/: config.py  device.py
renderer/: CMakeLists.txt
renderer/shaders/: Uniforms.h  blit.metal  gbuffer.metal  placeholder.metal  triangle.metal
renderer/src/: main.cpp  metal_impl.cpp
renderer/src/app/: Camera.cpp  Camera.hpp  CameraPath.cpp  CameraPath.hpp  CocoaBridge.h  CocoaBridge.mm  GBufferPass.cpp  GBufferPass.hpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp
renderer/src/io/: FrameWriter.cpp  FrameWriter.hpp  NpyWriter.cpp  NpyWriter.hpp  StbWriter.cpp  StbWriter.hpp
